[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cxutils" # Distribution name (PyPI name)  
version = "0.1.0" # example version  
description = "cxutils: utility functions for pycortex"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Jurjen Heij", email = "jurjenheij@gmail.com" }]
maintainers = [{ name = "Jurjen Heij", email = "jurjenheij@gmail.com" }]
keywords = ["visualization", "neuroimaging"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
]
# requires-python = ">=3.7, <3.11"

dependencies = [
    "lazyfmri @ git+https://github.com/gjheij/lazyfmri.git",
    "fmriproc @ git+https://github.com/gjheij/fmriproc.git",
    "pycortex",
    "imageio",
    "nibabel",
    "numpy",
    "configparser",
    "matplotlib",
    "scipy",
    "pandas",
]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8"]

[tool.setuptools]
packages = ["cxutils"]
package-data = { cxutils = ["version.py"] }
