[build-system]
requires = ["setuptools>=61.0", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cxutils" # Distribution name (PyPI name)  
dynamic = ["version"]
description = "cxutils: utility functions for pycortex"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Jurjen Heij", email = "jurjenheij@gmail.com" }]
maintainers = [{ name = "Jurjen Heij", email = "jurjenheij@gmail.com" }]
keywords = ["visualization", "neuroimaging"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.8"
dependencies = [
    "lazyfmri @ git+https://github.com/gjheij/lazyfmri.git",
    "fmriproc @ git+https://github.com/gjheij/fmriproc.git",
    "pycortex",
    "imageio",
    "nibabel",
    "numpy",
    "configparser",
    "matplotlib",
    "scipy",
    "pandas",
]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8"]

[tool.setuptools_scm]
write_to = "cxutils/version.py"

[tool.setuptools.packages.find]
include = ["cxutils*"]

[tool.setuptools.package-data]
cxutils = ["version.py"]

[tool.setuptools.data-files]
"bin" = ["bin/*"]
